test/classes/delete-free/list/list-of-owned-nil.good
list-of-owned-nil.chpl:11: error: halt reached - argument to ! is nil
